--- a/CT/README
+++ b/CT/README
@@ -9,6 +9,8 @@ program utilizes TCP sockets, for the server and client connections.
 - Eclipse
 - VS Code
 - Jar builder 
+- mac osx montery
+- mac terminal
 
 ## Build and Installation
 
